--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^2.3.0",
     "formik": "^2.4.5",
     "next": "14.1.3",
     "react": "^18",
