--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.18",
